# EV_focus_tool

./: .env  .env.example  .env.template  .gitignore  Dockerfile  Makefile  README.md  StockScreen.md  build.sh  create_virtualenv.sh  deploy.sh  docker-compose.yml  egg.sh  entrypoint.sh  main.py  pyproject.toml  requirements.txt  run_local.sh  run_server.sh
.github/workflows/: ci.yml
.pytest_cache/v/cache/: nodeids
app/: api.py  main.py  models.py  spacy_extractor.py
app/api/routes/: api.py  predictor.py  stocks.py
app/core/: config.py  errors.py
app/models/: stocktrade.py
app/services/: predict.py  stock.py
notebook/: StockScreen.md  StockScreen_Application.ipynb
