[tool.poetry]
name = "ev_focus_tool_v2"
version = "0.1.0"
description = "Project for creating EV based trading streams"
authors = ["Your address email (you@example.com)"]

[tool.poetry.dependencies]
python = "^3.7.1"
fastapi = "^0.45.0"
uvicorn = "^0.11.1"
pydantic = "^1.3"
requests = "^2.22.0"
loguru = "^0.4.0"
joblib = "^0.15.1"
numpy = "^1.20.1"
pandas = "^1.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^19.10b0", allow-prereleases = true}
autopep8 = "^1.4.4"
ipdb = "^0.12.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
